[package]
name = "ospf_rust_math"
version = "0.1.1"
authors = ["fuookami <fuookami@163.com>"]
edition = "2021"
description = "A math utils for ospf-rust."
license = "MIT OR Apache-2.0"

[dependencies]
ospf_rust_base = { git="https://github.com/fuookami/ospf-rust-base.git" }
ospf_rust_meta_programming = { git="https://github.com/fuookami/ospf-rust-meta-programming.git" }
num = "*"
bigdecimal = "*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
